fix post not visible in post section

--- a/src/components/ForumComponents/ForumCard.module.css
+++ b/src/components/ForumComponents/ForumCard.module.css
@@ -1,3 +1,8 @@
+/* for profile page */
+.shadow {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 .post_container {
   margin: 1.3rem 0;
 }
