--- a/src/components/ForumComponents/ProfileModal.module.css
+++ b/src/components/ForumComponents/ProfileModal.module.css
@@ -102,6 +102,7 @@
   width: 1.5rem;
   margin: auto 0.3rem;
   vertical-align: middle;
+  cursor: pointer;
 }
 
 .profile_description_container {
@@ -115,6 +116,7 @@
   margin-bottom: 1rem;
   border-radius: 0.1rem;
   backdrop-filter: blur(5px);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.123);
 }
 .description_topbar p {
   display: inline;
